--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@
 .svn/pristine/5a/5a63529fd716c6606da1d710e4c3173e35ed5e6e.svn-base
 .svn/pristine/73/73ce39fe8de2e0f53b210cbd83831ffdbd95a795.svn-base
 .svn/pristine/ed/ed92a7dd036f6c90eca501487301ab0fea2d284f.svn-base
+.svn/wc.db
+.svn/wc.db
+.svn/pristine/22/225a04ee044907291a99da67b614331da7186692.svn-base
+.svn/pristine/4c/4ce838b2f68210c1c4050b995e51364efd9a2727.svn-base
+.svn/pristine/c7/c73b15f0f8fff2ac0decbc62f5f6be6183cc23d2.svn-base
+.svn/pristine/d5/d5fa7c35fe7e8358a8bf1bcf4c327f66cbed267d.svn-base
+.svn/pristine/ee/eee9dddcd8f4f177f60cec8b977a7502eb1507c3.svn-base
+.vscode/extensions.json
+.svn/wc.db
+.svn/wc.db
